# routes/cards/cards_routes.go
@@ -121,6 +121,16 @@ func setupWeatherInfoRoutes(rg *gin.RouterGroup) {
 	rg.GET("/cards/weather/info", infoController.LoadInfoData)
 }
 
+// @Summary Retorna dados relacionados à cobertura vegetal
+// @Description Retorna dados relacionados à cobertura vegetal para o município fornecido
+// @Tags cards/vegetal
+// @Accept json
+// @Produce json
+// @Param city query string true "Código de município"
+// @Param year query string false "Ano dos dados"
+// @Success 200 {object} []CardsDataItem
+// @Failure 400 {object} ErrorResponse
+// @Router /cards/vegetal/cover [get]
 func setupCoverRoutes(rg *gin.RouterGroup) {
 	coverRepo := repositories_cards_vegetal.NewExternalVegetalCoverRepository()
 	coverService := services_cards_vegetal.NewVegetalCoverService(coverRepo)
@@ -129,6 +139,16 @@ func setupCoverRoutes(rg *gin.RouterGroup) {
 	rg.GET("/cards/vegetal/cover", coverController.LoadCoverData)
 }
 
+// @Summary Retorna dados relacionados à desigualdade ambiental e a vegetação
+// @Description Retorna dados relacionados à desigualdade ambiental e a vegetação para o município fornecido
+// @Tags cards/vegetal
+// @Accept json
+// @Produce json
+// @Param city query string true "Código de município"
+// @Param year query string false "Ano dos dados"
+// @Success 200 {object} []CardsDataItem
+// @Failure 400 {object} ErrorResponse
+// @Router /cards/vegetal/inequality [get]
 func setupInequalityRoutes(rg *gin.RouterGroup) {
 	inequalityRepo := repositories_cards_vegetal.NewExternalVegetalInequalityRepository()
 	inequalityService := services_cards_vegetal.NewVegetalInequalityService(inequalityRepo)
@@ -137,6 +157,16 @@ func setupInequalityRoutes(rg *gin.RouterGroup) {
 	rg.GET("/cards/vegetal/inequality", inequalityController.LoadInequalityData)
 }
 
+// @Summary Retorna dados de ranking
+// @Description Retorna dados para a construção do ranking de desigualdade ambiental e a vegetação
+// @Tags cards/vegetal
+// @Accept json
+// @Produce json
+// @Param city query string true "Código de município"
+// @Param year query string false "Ano dos dados"
+// @Success 200 {object} []RankingData
+// @Failure 400 {object} ErrorResponse
+// @Router /cards/vegetal/ranking [get]
 func setupRankingVegetalRoutes(rg *gin.RouterGroup) {
 	rankRepo := repositories_cards_vegetal.NewExternalVegetalRankingRepository()
 	rankService := services_cards_vegetal.NewVegetalRankingService(rankRepo)
@@ -145,6 +175,15 @@ func setupRankingVegetalRoutes(rg *gin.RouterGroup) {
 	rg.GET("/cards/vegetal/ranking", rankController.LoadRankingData)
 }
 
+// @Summary Retorna dados adicionais para a vegetação
+// @Description Retorna dados adicionais para a camada
+// @Tags cards/vegetal
+// @Accept json
+// @Produce json
+// @Param city query string true "Código de município"
+// @Success 200 {object} []CardsDataItem
+// @Failure 400 {object} ErrorResponse
+// @Router /cards/vegetal/info [get]
 func setupVegetalInfoRoutes(rg *gin.RouterGroup) {
 	infoRepo := repositories_cards_vegetal.NewExternalVegetalInfoRepository()
 	infoService := services_cards_vegetal.NewVegetalInfoService(infoRepo)
